Fix scrollbar affect width issue

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@
   fill: lightgrey;
 }
 
+body {
+  overflow-y: overlay;
+}
+
 rect {
   fill: lightblue;
 }
